@@ -1,10 +1,9 @@
 class piece {
-    constructor(x, y, z, r, t) {
+    constructor(x, y, z, t) {
         console.log('New Piece Constructed...')
         this.x = x;
         this.y = y;
         this.z = z;
-        this.r = r;
         this.t = t;
         this.blocks = this.createBlock(this.t);
         this.pivot = this.createPivot(this.t)
@@ -73,34 +72,51 @@ class piece {
         return maxZ - minZ + 1;
     }
 
-    // getPivot() {
-    //     let minX = 9999;
-    //     let maxX = -1;
-    //     let minY = 9999;
-    //     let maxY = -1;
-    //     let minZ = 9999;
-    //     let maxZ = -1;
-    //     for(let i=0; i<this.blocks.length; i++) {
-    //         if (this.blocks[i].x < minX)
-    //             minX = this.blocks[i].x;
-    //         if (this.blocks[i].x > maxX)
-    //             maxX = this.blocks[i].x;
-    //         if (this.blocks[i].y < minY)
-    //             minY = this.blocks[i].y;
-    //         if (this.blocks[i].y > maxY)
-    //             maxY = this.blocks[i].y;
-    //         if (this.blocks[i].z < minZ)
-    //             minZ = this.blocks[i].z;
-    //         if (this.blocks[i].z > maxZ)
-    //             maxZ = this.blocks[i].z;
-    //     }
-    //     let pivX = minX + (maxX - minX) / 2;
-    //     let pivY = minY + (maxY - minY) / 2;
-    //     let pivZ = minZ + (maxZ - minZ) / 2;
-    //     return new THREE.Vector3(pivX, pivY, pivZ);;
-    // }
-
     rotate(x, y, z) {
+        let result = this.tryRotate(x, y, z, 0, 0, 0);
+        switch(result) {
+            case 'no prob':
+            return true
+            case 'hit left':
+            this.tryRotate(x, y, z, 1, 0, 0);
+            return true
+            case 'hit right':
+            this.tryRotate(x, y, z, -1, 0, 0);
+            return true
+            case 'hit up':
+            this.tryRotate(x, y, z, 0, 0, 1);
+            return true
+            case 'hit down':
+            this.tryRotate(x, y, z, 0, 0, -1);
+            return true
+
+        }
+        return true
+    }
+
+    tryRotate(x, y, z, offX, offY, offZ) {
+        let ix, iy, iz;
+        this.move(offX, offY, offZ);
+        this.forceRotate(x, y, z);
+        for(let i=0; i<this.blocks.length; i++) {
+            ix = this.blocks[i].x;
+            iy = this.blocks[i].y;
+            iz = this.blocks[i].z;
+            if (game.pit[iy][iz][ix] == 'W' || game.pit[iy][iz][ix] == 'B') {
+                // console.log('cannot rotate! hit the ' + game.pit[iy][ix]);
+                this.move(-offX, -offY, -offZ);
+                this.forceRotate(-x, -y, -z);
+                break; 
+            }
+        }
+        if (ix <= 0) return 'hit left';
+        if (ix >= game.pitWidth-1) return 'hit right';
+        if (iz <= 0) return 'hit up';
+        if (iz >= game.pitHeight-1) return 'hit down';
+        return 'no prob';
+    }
+
+    forceRotate(x, y, z) {
         console.log('rotate:', x, y, z);
         let axis = new THREE.Vector3( x, y, -z );
         for(let i=0; i<this.blocks.length; i++) {
@@ -209,4 +225,15 @@ class piece {
         return null;
     }
 
+    clone() {
+        let newPiece = new piece(
+            this.x,
+            this.y,
+            this.z,
+            this.t
+        );
+        newPiece.blocks = this.blocks.slice(0);
+        newPiece.pivot = this.pivot.clone();
+        return newPiece;
+    }
 }
